--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "gh": "^2.8.9",
     "gh-pages": "^6.3.0",
     "pages": "^0.0.16",
-    "parcel": "^2.14.0",
-    "pnotify": "^5.2.0"
+    "parcel": "^2.14.0"
   }
 }
